# checkmate_AI

checkmate_ai/: CMakeLists.txt
checkmate_ai/app/: CMakeLists.txt
checkmate_ai/app/include/: BoardReader.h  ChessEngine.h  GameController.h  LCDPrinter.h  chessHelper.h  chess_board.h  draw_stuff.h  game_engine_manager.h  joystick_help.h  logic_led_manager.h  main.h  sensor_game_engine_manager.h  timer.h
checkmate_ai/app/src/: BoardReader.c  ChessEngine.c  GameController.c  LCDPrinter.c  chessHelper.c  chess_board.c  draw_stuff.c  game_engine_manager.c  joystick_help.c  logic_led_manager.c  main.c  sensor_game_engine_manager.c  sensor_testor  test.c  testTimer.c  timer.c
checkmate_ai/hal/: CMakeLists.txt
checkmate_ai/hal/include/: btn_statemachine.h  game_engine.h  gpio.h  i2c_module.h  joystick_controller.h  led.h  led_controller.h
checkmate_ai/hal/include/hal/: chessHelper.h  port_extender.h
checkmate_ai/hal/neopixel/src/: main.c
checkmate_ai/hal/sharedMem/sharedMem-Linux/: Makefile  sharedDataLayout.h  sharedDataLayoutLinux.h  sharedMem-Linux.c
checkmate_ai/hal/sharedMem/sharedMem-R5/: CMakeLists.txt  load_r5_mcu.sh  zephyr-env.sh
checkmate_ai/hal/sharedMem/sharedMem-R5/boards/: beagley_ai_j722s_mcu_r5f0_0.overlay
checkmate_ai/hal/sharedMem/sharedMem-R5/src/: main.c  sharedDataLayout.h
checkmate_ai/hal/src/: btn_statemachine.c  chessHelper.c  game_engine  game_engine.c  gpio.c  i2c_module.c  joystick_controller.c  led.c  led_controller.c  port_extender.c  stockfish_parent  stockfish_parent.c
